--- a/public/css/before-title-full-width.css
+++ b/public/css/before-title-full-width.css
@@ -30,44 +30,7 @@ body.milun-search-open {
 
 }
 
-/*
-    .notification-container_full_width {
-    position: absolute;
-    top: 100%;
-    left: 0; 
 
-    width: 80vw;
-    max-width: 80vw;
-
-    min-height: 100px;
-    max-height: 90vh;
-    overflow-y: auto;
-
-    background: #ffffff;
-    padding: 20px;
-    box-sizing: border-box;
-
-    border-radius: 0 8px 8px 0; 
-    box-shadow: 4px 0 20px rgba(0,0,0,0.2);
-    z-index: 999999;
-
-    opacity: 0;
-    visibility: hidden;
-
-  
-    transform: translateX(100vw);
-
-    transition: transform 0.6s ease, opacity 0.3s ease;
-}
-
-.notification-container_full_width.active {
-    opacity: 1;
-    visibility: visible;
-
-    
-    transform: translateX(0);
-
-}
 
 /* Open state 
 .notification-container_full_width.active {
@@ -111,8 +74,8 @@ body.milun-search-open {
         top: 0;
         right: 0;
         left: 0;              /* ✅ important */
-        width: 50% !important;          /* ✅ instead of 100vw */
-        max-width: 50% !important;
+        width: 100% !important;          /* ✅ instead of 100vw */
+        max-width: 100% !important;
         height: 100vh;
         box-sizing: border-box;
         overflow-x: hidden;
